<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Botão para navegar para o formulário -->
    <Button
        android:id="@+id/btnForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnForm" />

    <!-- Espaçamento entre os botões -->
    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp" />

    <!-- Botão para navegar para a lista de itens -->
    <Button
        android:id="@+id/btnList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnList" />

    <!-- Espaçamento entre os botões -->

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp" />

    <!-- Botão para navegar para os creditos -->
    <Button
        android:id="@+id/btnCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCredits" />

</LinearLayout>
